2011-01-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/solver/SatSolver.tcc: Add support for DMCS_LOG_*.
	* include/parser/ParserDirector.tcc: Likewise.
	* include/parser/BridgeRulesBuilder.tcc: Likewise.
	* include/dyndmcs/Instantiator.tcc: Likewise.

	* include/network/BaseClient.h: Fix warning.

	* include/mcs/Rule.h: Fix argument-dependent name lookup.

	* include/dmcs/Log.h (DMCS_LOG_TRACE): Beautification.

2011-01-17  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* log4cxx.cfg: Remove date output.

	* src/solver/RelSatSolver.cpp: Add some debugging information.

	* src/network/OutputThread.cpp: Send a NULL pointer after each
	full package.

	* src/network/JoinThread.cpp: Use int counters.

	* src/network/ConcurrentMessageDispatcher.cpp: Relax the
	assertion.

	* src/dmcs/StreamingDMCS.cpp: Sending start_up assignment in all
	cases (leaf and non-leaf).

	* include/network/NeighborThread.h: Allow NeighborIn and
	NeighborOut to run together.

	* include/network/NeighborIn.h: Add some debug information.
	* src/network/JoinThread.cpp: Likewise.

	* include/dmcs/StreamingDMCS.h: Remove some Ptr.

	* log4cxx.cfg: New file.

	* src/dmcsd.cpp: Add logging commandline argument.

	* include/dmcs/Log.h: Add __PRETTY_FUNCTION__ to DMCS_LOG_TRACE.

	* include/network/Handler.tcc: overwrite_send and receive pure
	pointers.
	* include/network/Handler.h: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/network/RouterThread.h: Likewise.
	* include/network/NeighborOut.h: Likewise.

	* include/dmcs/OutputNotification.h: Comment out Ptr typedef.
	* include/dmcs/ConflictNotification.h: Likewise.
	* include/dmcs/StreamingDMCSNotification.h: Likewise.

	* src/network/OutputThread.cpp: Setup header after receive k models.

	* src/dmcs/StreamingDMCS.cpp: Notify SAT via overwrite_send.

	* include/dmcs/StreamingDMCS.h: Store message to SAT.
